install postgres and connect in docker

--- a/eshop-microservices/Services/Catalog/Catalog.API/Catalog.API.csproj
+++ b/eshop-microservices/Services/Catalog/Catalog.API/Catalog.API.csproj
@@ -7,10 +7,12 @@
     <UserSecretsId>9c731a66-fc70-4d77-a28f-f40ee5ce0a56</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Carter" Version="8.2.1" />
+    <PackageReference Include="Marten" Version="8.0.0-alpha-3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
   </ItemGroup>
 
