--- a/src/Services/Catalog/Catalog.API/Catalog.API.csproj
+++ b/src/Services/Catalog/Catalog.API/Catalog.API.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\src\BuildingBlocks\buildingBlocks\buildingBlocks.csproj" />
+    <ProjectReference Include="..\..\..\..\src\BuildingBlocks\BuildingBlocks\buildingBlocks.csproj" />
   </ItemGroup>
 
 </Project>
